--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,14 @@
     <string name="menu_volume">прослухати</string>
     <string name="menu_example">приклади</string>
 
+<!--    HomePage fragment-->
+    <string name="translate_fragment_btn">ПЕРЕКЛАДАЧ</string>
+    <string name="list_word_fragment_btn">БАЗА СЛІВ</string>
+    <string name="quiz_fragment_btn">ВІКТОРІНА</string>
+
     <!--    TranslateRecyclerItem-->
     <string name="translate">ПЕРЕКЛАД</string>
     <string name="uses">застосування</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
