--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,8 @@
     <!--    TranslateRecyclerItem-->
     <string name="translate">ПЕРЕКЛАД</string>
     <string name="uses">застосування</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+<!--    Menu-->
+    <string name="delete_all">видалити все</string>
+    <string name="to_translate_word">до перекладача</string>
 </resources>
